--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "angular2-text-mask": "8.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
