--- a/package.json
+++ b/package.json
@@ -20,21 +20,24 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "angular2-text-mask": "8.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "firebase": "^5.7.1",
     "jquery": "^3.3.1",
+    "jquery.maskedinput": "^1.4.1",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
-    "angular2-text-mask": "8.0.0"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
     "@angular/cli": "~7.0.6",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.22",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
