--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@types/file-saver": "^2.0.0",
     "angular2-text-mask": "8.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.0",
     "firebase": "^5.7.1",
     "jquery": "^3.3.1",
     "jquery.maskedinput": "^1.4.1",
