--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^5.7.1",
     "jquery": "^3.3.1",
     "jquery.maskedinput": "^1.4.1",
+    "ngx-cookie-service": "^2.1.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
